# SimpleMassDuel

./: 2022-05-04 简易质点模型开发文档.md  CMakeLists.txt  README.md  pre-install.sh
examples/: TreeNodes.xml  bt_trace.fbl  draw  raw_logger.txt  trace_mass.txt
examples/data/: bt_trace_0.05.fbl  bt_trace_0.125.fbl  bt_trace_0.25.fbl  bt_trace_0.5.fbl  bt_trace_0.75.fbl  bt_trace_1.0.fbl
include/mass_bt_nodes_v2/: mass_bt_nodes_2d.hpp  mass_bt_nodes_3d.h  move_nodes_2d.h  node_reg_init_2d.hpp  node_var_func_2d.hpp  transfer_nodes_2d.h
include/mass_duel_2d_v2/: hinder.h  search.h
include/mass_duel_v1/: mass_bt_nodes.h  mass_point.h
include/mass_point_v2/: circle_2d.h  line_2d.h  mass_point_2d.hpp  mass_point_3d.h  math_2d.h  point_2d.h  polygon_2d.h
src/: CMakeLists.txt  TreeNodes.xml  draw_trace.cpp  main.cpp  main_2d.cpp  main_3d.cpp  mass_bt_nodes.cpp  mass_point.cpp
src/mass_bt_nodes_v2/: CMakeLists.txt  mass_bt_nodes_2d.cpp  mass_bt_nodes_3d.cpp  move_nodes_2d.cpp  transfer_nodes_2d.cpp
src/mass_duel_2d_v2/: CMakeLists.txt  hinder.cpp  search.cpp
src/mass_point_v2/: CMakeLists.txt  circle_2d.cpp  line_2d.cpp  mass_point_3d.cpp  math_2d.cpp  point_2d.cpp  polygon_2d.cpp
tests/: CMakeLists.txt  main.cpp  mass_bt_nodes_2d_test.cpp  mass_duel_2d_test.cpp  mass_point_2d_test.cpp
tests/include/test_tools/: TEST_TOOLS_2D.HPP
utils/visualizer/: draw_trace.gnu  runvis.sh
utils/visualizer-gnuplot/: draw_trace.gnu
utils/visualizer-matlab/: draw_trace.m  importfile.m  importfile1.m
utils/visualizer-pyplot/: plot_trace.py
